fixed series to work with Jekyll

--- a/docs/_posts/2018-09-15-CI-CD.md
+++ b/docs/_posts/2018-09-15-CI-CD.md
@@ -6,6 +6,8 @@ excerpt: ""
 image: "/images/ci-cd-pipeline.jpg"
 category: presentation
 permalink: "2018/Sept"
+series: "agile-deep-dive"
+series-rank: 3
 ---
 
 ## Continuous Integratin & Delivery
