--- a/docs/_posts/2018-10-15-Quality.md
+++ b/docs/_posts/2018-10-15-Quality.md
@@ -6,6 +6,8 @@ excerpt: "Improve quality & efficiency using BDD."
 image: "/images/software-quality.jpg"
 category: presentation
 permalink: "2018/Oct"
+series: "agile-deep-dive"
+series-rank: 4
 ---
 
 ## Quality
