--- a/docs/_posts/2018-10-15-Quality.md
+++ b/docs/_posts/2018-10-15-Quality.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Qulity"
+title:  "Quality"
 date:   2018-10-15
 excerpt: "Improve quality & efficiency using BDD."
 image: "/images/software-quality.jpg"
