helps if you use the right image file name

--- a/docs/_posts/2019-11-07-RedHat.md
+++ b/docs/_posts/2019-11-07-RedHat.md
@@ -13,7 +13,7 @@ series-rank: 6
 ## Automate Everything - Deploy with Confidence
 This month we had Joe Gavin and Chris Reynolds from Red Hat, speak to us about the power of automation and containerized cloud native solutions built upon Ansible and OpenShift.  Ansible is an industry leading Infrastructure-as-Code solution that serves as a foundation for ubiquitous configuration management and automated deployment in a DevSecOps world.  OpenShift goes further to provide a scalable, mission critical Platform-as-a-Service layer built upon Kubernetes for rapid, reliable applicaiton deployment and operations management.  The technologies featured by Red Hat in this session are directly applicable to our defense industry work as we transition to embrace the latest DevSecOps guidance provided by the DoD CIO.  
 
-![alt text](./../images/IMG_3682.jpg "Nov 2019 Meetup with Red Hat - Image by Alana Henley")
+![alt text](/images/IMG_3680.jpg "Nov 2019 Meetup with Red Hat - Image by Alana Henley")
 
 Thanks to everyone who came out and made this a great event.  Special thanks to Jonathan and the team at TekSystems for providing catering and continuing to support our meetup and our community!
 
