--- a/docs/_posts/2021-04-01-Cynefin.md
+++ b/docs/_posts/2021-04-01-Cynefin.md
@@ -9,7 +9,7 @@ series-rank: 6
 ---
 
 ## What is Cynefin
-As I've been doign some reading I came across the idea of the Cynefin (pronounced ) and it really resonated with me.  I think the DevOps community has long recognized that complex product creation and delivery is itself a complex system of work that we much manage.  We often apply strategies such as Agile and Lean to help us reason through the complexity and create positive outcomes.  The Cynefin gives us a framework to reason about different types of systems of work and strategies we can apply within each.
+As I've been doing some reading I came across the idea of the Cynefin (pronounced ) and it really resonated with me.  I think the DevOps community has long recognized that complex product creation and delivery is itself a complex system of work that we much manage.  We often apply strategies such as Agile and Lean to help us reason through the complexity and create positive outcomes.  The Cynefin gives us a framework to reason about different types of systems of work and strategies we can apply within each.
 
 After a couple months of cancellations I'm hoping you can join us for this virtual event.  The Zoom info is below.  Please feel free to share with anyone who may be interested.
 
