added draft post for April 2021

--- a/docs/_posts/2021-04-01-Cynefin.md
+++ b/docs/_posts/2021-04-01-Cynefin.md
@@ -1,43 +1,28 @@
 ---
 layout: post
 title:  "Release the Cynefin"
-date:   2021-03-31
-excerpt: "Thinking about types of systems of work"
+date:   2021-04-02
+excerpt: "Characterizing systems of work"
 image: "/images/Cynefin_framework_by_Edwin_Stoop.jpg"
 permalink: "2021/April"
 series-rank: 6
 ---
 
 ## What is Cynefin
-As I've been doing some reading I came across the idea of the Cynefin (pronounced kuh-NEV-in) and it really resonated with me.  I think the DevOps community has long recognized that complex product creation and delivery is itself a complex system of work that we must manage.  We often apply strategies such as Agile and Lean to help us reason through the complexity and create positive outcomes.  The Cynefin gives us a framework to reason about different types of systems of work and strategies we can apply within each.
+I've been doing some reading and came across the idea of the Cynefin (pronounced kuh-NEV-in) which really resonated with me.  I think the DevOps community has long recognized that complex product creation and delivery is itself a complex system of work that we must carefully engineer.  We often apply high level strategies such as Agile and Lean to help us reason through the complexity and create positive outcomes.  The Cynefin gives us a framework to reason about the situations we find ourselves in and align them to different categories of systems of work with strategies we can apply for each.
 
-After a couple months of cancellations I'm hoping you can join us for this virtual event.  The Zoom info is below.  Please feel free to share with anyone who may be interested.
+Sincere thanks to everyone who joined us for this session.  I particularly enjoyed the virtual lean coffee we did after the presentation using [agile.coffee](http://agile.coffee).  Unfortunately the interaction didn't convey very well in the video recording, but I did capture our board and published it to the [GitHub repo](https://www.google.com).  I'll experiment with strategies to better capture that interaction going forward.
 
-### Zoom Info
-    DevOps for Defense is inviting you to a scheduled Zoom meeting.
+<div class="box" markdown="1">
+The [meetup presentation](https://www.google.com) is posted as open source to our GitHub repository. 
+</div>
 
-    Topic: DevOps for Defense - April 2021
-    Time: Apr 1, 2021 05:30 PM Central Time (US and Canada)
+<div class="box" markdown="1">
+If you can't make it to our meetup, remember to subscribe to the DevOps for Defene [YouTube](https://www.youtube.com/channel/UCvECCp5P_Oo82ZPN5uRifpA) channel. 
 
-    Join Zoom Meeting
-    https://us02web.zoom.us/j/84945468309?pwd=ZnRmTlB2QUpOd1JOU0hRZ2NsbVpSZz09
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LeVSpNhSl8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    Meeting ID: 849 4546 8309
-    Passcode: 807609
-    One tap mobile
-    +13017158592,,84945468309#,,,,*807609# US (Washington DC)
-    +13126266799,,84945468309#,,,,*807609# US (Chicago)
-
-    Dial by your location
-            +1 301 715 8592 US (Washington DC)
-            +1 312 626 6799 US (Chicago)
-            +1 929 205 6099 US (New York)
-            +1 253 215 8782 US (Tacoma)
-            +1 346 248 7799 US (Houston)
-            +1 669 900 6833 US (San Jose)
-    Meeting ID: 849 4546 8309
-    Passcode: 807609
-    Find your local number: https://us02web.zoom.us/u/kdDlVtop8
+</div>
 
 #### Attribution
 
