updated repo links in last post

--- a/docs/_posts/2021-04-01-Cynefin.md
+++ b/docs/_posts/2021-04-01-Cynefin.md
@@ -11,10 +11,10 @@ series-rank: 6
 ## What is Cynefin
 I've been doing some reading and came across the idea of the Cynefin (pronounced kuh-NEV-in) which really resonated with me.  I think the DevOps community has long recognized that complex product creation and delivery is itself a complex system of work that we must carefully engineer.  We often apply high level strategies such as Agile and Lean to help us reason through the complexity and create positive outcomes.  The Cynefin gives us a framework to reason about the situations we find ourselves in and align them to different categories of systems of work with strategies we can apply for each.
 
-Sincere thanks to everyone who joined us for this session.  I particularly enjoyed the virtual lean coffee we did after the presentation using [agile.coffee](http://agile.coffee).  Unfortunately the interaction didn't convey very well in the video recording, but I did capture our board and published it to the [GitHub repo](https://www.google.com).  I'll experiment with strategies to better capture that interaction going forward.
+Sincere thanks to everyone who joined us for this session.  I particularly enjoyed the virtual lean coffee we did after the presentation using [agile.coffee](http://agile.coffee).  Unfortunately the interaction didn't convey very well in the video recording, but I did capture our board and published it to the [GitHub repo](https://github.com/jondavid-black/DevOpsForDefense/blob/master/Meetup/2021/DevOps_for_Defense_April_2021-Lean_Coffee.pdf).  I'll experiment with strategies to better capture that interaction going forward.
 
 <div class="box" markdown="1">
-The [meetup presentation](https://www.google.com) is posted as open source to our GitHub repository. 
+The [meetup presentation](https://github.com/jondavid-black/DevOpsForDefense/blob/master/Meetup/2021/2021-04%20DO4D%20-%20Cynefin.pdf) is posted as open source to our GitHub repository. 
 </div>
 
 <div class="box" markdown="1">
