--- a/docs/_posts/2021-04-01-Cynefin.md
+++ b/docs/_posts/2021-04-01-Cynefin.md
@@ -20,7 +20,7 @@ The [meetup presentation](https://github.com/jondavid-black/DevOpsForDefense/blo
 <div class="box" markdown="1">
 If you can't make it to our meetup, remember to subscribe to the DevOps for Defene [YouTube](https://www.youtube.com/channel/UCvECCp5P_Oo82ZPN5uRifpA) channel. 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/LeVSpNhSl8I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/A_PDlovjBO0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
 
