added link to AWS presentation

--- a/docs/_posts/2022-03-03-AWS.md
+++ b/docs/_posts/2022-03-03-AWS.md
@@ -12,7 +12,7 @@ series-rank: 6
 This month we welcome Katreena Mullican, our Huntsville local AWS Sr Solutions Architect, to talk about the latest from Amazon Web Services for developers and DevOps.  Katreena steps us through all the latest news and capabilities presented this year at the AWS Re:Invent conference.  Special thanks to Katreena for the great discussions with members of our community before and after her presentation.  And thanks to TekSystems for helping us make the connections that enabled this month's guest speaker.
 
 <div class="box" markdown="1">
-Katreena's [meetup presentation]() is posted as open source to our GitHub repository.  Thanks to Katreena and AWS for allowing us to post their material for our community.
+Katreena's [meetup presentation](https://github.com/jondavid-black/DevOpsForDefense/blob/master/Meetup/2022/2022-03%20DO4D%20-%20AWS.pdf) is posted as open source to our GitHub repository.  Thanks to Katreena and AWS for allowing us to post their material for our community.
 </div>
 
 Thanks to everyone who joined this month and to Rocket Republic for hosting us.
