fix image link in blog post

--- a/docs/_posts/2022-03-03-AWS.md
+++ b/docs/_posts/2022-03-03-AWS.md
@@ -3,7 +3,7 @@ layout: post
 title:  "What's new at AWS for Developers and DevOps"
 date:   2022-03-03
 excerpt: "A look at the latest capabilities from Amazon Web Services Re:Invent"
-image: "/images/AWSReCap.png"
+image: "/images/AWS_ReCap.png"
 permalink: "2022/March"
 series-rank: 6
 ---
